force-app/main/default/objects/Customer_Health__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Healths</relationshipLabel>
    <relationshipName>Customer_Healths</relationshipName>
    <type>Lookup</type>
</CustomField>