force-app/main/default/objects/Customer_Health__c/fields/Churn_Risk__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk__c</fullName>
    <label>Churn Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>