force-app/main/default/objects/Customer_Health__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Customer company or customer name</description>
    <inlineHelpText>Enter customer name</inlineHelpText>
    <label>Customer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>