force-app/main/default/objects/Customer_Health__c/validationRules/Health_Score_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Health_Score_Range</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
Health_Score__c &lt; 0,
Health_Score__c &gt; 100
)</errorConditionFormula>
    <errorDisplayField>Health_Score__c</errorDisplayField>
    <errorMessage>Health Score must be between 0 and 100.</errorMessage>
</ValidationRule>